[package]
name = "todo_cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "todo"        # final binary name
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "6.0.0"
anyhow = "1.0"
colored = "3.0.0"
