[package]
name = "rs-todo-cli"
version = "0.1.0"
edition = "2024"
authors = ["sanjivpaul"]
description = "A simple TODO CLI app written in Rust"
license = "MIT"
repository = "https://github.com/sanjivpaul/todo_cli"
readme = "README.md"
keywords = ["todo", "cli", "task", "productivity"]
categories = ["command-line-utilities"]
homepage = "https://github.com/sanjivpaul/todo_cli"

[[bin]]
name = "todo"        # final binary name
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "6.0.0"
anyhow = "1.0"
colored = "3.0.0"
